--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "comlink": "^4.3.1",
     "heic2any": "^0.0.3",
+    "localforage": "^1.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
